Added new simple example which uses simple polyflow view
