# components/tasklist-backend/src/main/kotlin/io/holunda/polyflow/example/tasklist/adapter/rest/impl/TaskResource.kt
@@ -147,6 +147,33 @@ class TaskResource(
     return ResponseEntity.noContent().build()
   }
 
+  override fun getTasksAttributeNames(
+    xCurrentUserID: String,
+    filters: List<String>?
+  ): ResponseEntity<List<String>> {
+    val user = userService.getUser(xCurrentUserID)
+    val result = taskServiceGateway.getTaskAttributeNames(user,filters ?: listOf())
+
+    return ResponseEntity
+      .ok()
+      .headers(HttpHeaders().apply { this[HEADER_ELEMENT_COUNT] = result.totalElementCount.toString() })
+      .body(result.elements)
+  }
+
+  override fun getTasksAttributeValues(
+    xCurrentUserID: String,
+    attributeName: String,
+    filters: List<String>?
+  ): ResponseEntity<List<Any>> {
+    val user = userService.getUser(xCurrentUserID)
+    val result = taskServiceGateway.getTaskAttributeValues(attributeName, user,filters ?: listOf())
+
+    return ResponseEntity
+      .ok()
+      .headers(HttpHeaders().apply { this[HEADER_ELEMENT_COUNT] = result.totalElementCount.toString() })
+      .body(result.elements)
+  }
+
   private fun getAuthorizedTask(taskId: String, user: User): Task = taskServiceGateway
     .getTask(taskId)
     .apply {
